// Vitest Snapshot v1

exports[`addPipe.ts > addPipe.ts 1`] = `
"// Result of running refactor effect/addPipe at position 5:18
import * as T from \\"@effect/core/io/Effect\\"
import { pipe } from \\"@tsplus/stdlib/data/Function\\"

const test = pipe(T.succeed(1), T.map((a: number) => a * 2))
"
`;

exports[`asyncAwaitToGen.ts > asyncAwaitToGen.ts 1`] = `
"// Result of running refactor effect/asyncAwaitToGen at position 4:28
import * as T from \\"@effect/core/io/Effect\\"

export function refactorMe(arg: string) {
    return T.gen(function*($) {
        return yield* $(T.promise(Promise.resolve(1)))
    })
}
"
`;

exports[`asyncAwaitToGenTryPromise.ts > asyncAwaitToGenTryPromise.ts 1`] = `
"// Result of running refactor effect/asyncAwaitToGenTryPromise at position 4:28
import * as Effect from \\"@effect/core/io/Effect\\"

export function refactorMe(arg: string) {
    return Effect.gen(function*($) {
        for (let i = 0; i < 10; i++) {
            yield* $(Effect.tryCatchPromise(() => Promise.resolve(i), error => ({ _tag: \\"Error1\\" as const, error })))
        }
        return yield* $(Effect.tryCatchPromise(() => Promise.resolve(arg), error => ({ _tag: \\"Error2\\" as const, error })))
    })
}
"
`;

exports[`functionToArrow.ts > functionToArrow.ts 1`] = `
"// Result of running refactor effect/functionToArrow at position 5:20
/**
 * Docs
 */
export const myTest = (name: string) => name.length

/**
 * Docs
 */
export function myTest2(name: string) {
  if (name === \\"LOL\\") return 42
  return name.length
}

class Sample {
  /**
   * Docs
   */
  test(name: string) {
    return name.length
  }
}
"
`;

exports[`functionToArrow.ts > functionToArrow.ts 2`] = `
"// Result of running refactor effect/functionToArrow at position 12:20
/**
 * Docs
 */
export function myTest(name: string) {
  return name.length
}

/**
 * Docs
 */
export const myTest2 = (name: string) => {
    if (name === \\"LOL\\")
        return 42
    return name.length
}

class Sample {
  /**
   * Docs
   */
  test(name: string) {
    return name.length
  }
}
"
`;

exports[`functionToArrow.ts > functionToArrow.ts 3`] = `
"// Result of running refactor effect/functionToArrow at position 21:5
/**
 * Docs
 */
export function myTest(name: string) {
  return name.length
}

/**
 * Docs
 */
export function myTest2(name: string) {
  if (name === \\"LOL\\") return 42
  return name.length
}

class Sample {
  /**
   * Docs
   */
  /**
     * Docs
     */
    test = (name: string) => name.length
}
"
`;

exports[`removeCurryArrow.ts > removeCurryArrow.ts 1`] = `
"// Result of running refactor effect/removeCurryArrow at position 7:12
import * as T from \\"@effect/core/io/Effect\\"
import { pipe } from \\"@tsplus/stdlib/data/Function\\"

const test = pipe(
  T.succeed(\\"Hello\\"),
  T.tap(T.log)
)
"
`;

exports[`removePipe.ts > removePipe.ts 1`] = `
"// Result of running refactor effect/removePipe at position 5:16
import * as T from \\"@effect/core/io/Effect\\"
import { pipe } from \\"@tsplus/stdlib/data/Function\\"

const test = T.map(a => a * 1)(T.succeed(1))
"
`;

exports[`removePipe.ts > removePipe.ts 2`] = `
"// Result of running refactor effect/removePipe at position 7:7
import * as T from \\"@effect/core/io/Effect\\"
import { pipe } from \\"@tsplus/stdlib/data/Function\\"

const test = pipe(
  1,
  T.succeed,
  T.map(a => a * 1)
)
"
`;

exports[`updateTypeAnnotation.ts > updateTypeAnnotation.ts 1`] = `
"// Result of running refactor effect/updateTypeAnnotation at position 4:16
import * as T from \\"@effect/core/io/Effect\\"

export const test1: <A>(value: A) => T.Effect<never, never, A> = T.succeed
"
`;
